[project]
name = "MambuPy"
authors = [{name = "Javier Novoa C.", email = "jstitch@gmail.com"}]
license = {file = "LICENSE"}
description="A python lib for using Mambu APIs."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = ["PyYAML==6.0.1", "requests==2.31.0", "requests_toolbelt==1.0.0", "dateutils==0.6.12", "future==0.18.3"]

[project.optional-dependencies]
full = ["SQLAlchemy==1.3.6", "mysqlclient==2.1.0"]
doc = ["sphinx==5.0.0", "sphinx_rtd_theme"]
dev = ["build", "freezegun==1.1.0", "mock", "coverage", "pylint", "ruff", "black", "isort"]
deploy = ["m2r2", "twine"]
devtools = ["ipython", "ipdb"]

[project.urls]
Repository = "https://gitlab.com/jstitch/mambupy"
Issues = "https://gitlab.com/jstitch/mambupy/-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["MambuPy*", "mambupy*"]

[tool.setuptools.dynamic]
version = {attr = "MambuPy.__version__"}

[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"
